Small scrollbar fix

--- a/jsmm-applet/index.less
+++ b/jsmm-applet/index.less
@@ -8,7 +8,7 @@
 @import "info/index.less";
 
 .modal-open {
-	overflow: hidden;
+	overflow-y: hidden;
 }
 
 .ui-main {
